concord_macros/tests/trybuild/fail/sema/policy/unknown_profile_use.stderr
error: unknown profile `missing`
  --> tests/trybuild/fail/sema/policy/unknown_profile_use.rs:10:17
   |
10 |         profile missing
   |                 ^^^^^^^
